--- a/Css/style.css
+++ b/Css/style.css
@@ -10,8 +10,8 @@ background-color: black;
 color: #61122F;
 }
 body{
-	background-color: #white;
-	color: black;
+	background-color: #61122F;
+	color: white;
 }
 .glyphicon{
 	font-size: 30px;
