--- a/style.css
+++ b/style.css
@@ -7,10 +7,10 @@
 
 border: none;
 background-color: black;
-color: #61122F;
+color: white;
 }
 body{
-	background-color: #61122F;
+	background-color: white;
 	color: white;
 }
 .glyphicon{
