--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ background-color: black;
 color: white;
 }
 body{
-	background-color: white;
-	color: white;
+	background-color: black;
+	color: black;
 }
 .glyphicon{
 	font-size: 30px;
