--- a/style.css
+++ b/style.css
@@ -6,12 +6,12 @@
 .navbar{
 
 border: none;
-background-color: black;
+background-color: grey;
 color: white;
 }
 body{
-	background-color: black;
-	color: black;
+	background-color: white;
+	color: grey;
 }
 .glyphicon{
 	font-size: 30px;
