--- a/style.css
+++ b/style.css
@@ -5,13 +5,13 @@
 }
 .navbar{
 
-border: 1px;
-background-color: white;
-color: white;
+border: none;
+background-color: black;
+color: #61122F;
 }
 body{
-	background-color: white;
-	color: black;
+	background-color: #61122F;
+	color: white;
 }
 .glyphicon{
 	font-size: 30px;
@@ -35,7 +35,7 @@ h2{
 	text-align: center;
 }
 #myNavbar ul li a {
-	color: white;
+	color: #61122F;
 }
 .navbar-brand{
 font-size: 30px;	
