--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,11 +6,11 @@
 .navbar{
 
 border: none;
-background-color: black;
-color: #61122F;
+background-color: white;
+color: grey;
 }
 body{
-	background-color: #61122F;
+	background-color: white;
 	color: white;
 }
 .glyphicon{
