--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,12 +6,16 @@
 .navbar{
 
 border: none;
-background-color: white;
-color: grey;
+background-color: black;
+color: #61122F;
 }
 body{
-	background-color: white;
+	background-color: #61122F;
 	color: white;
+}
+.glyphicon{
+	font-size: 30px;
+	color:#61122F; 
 }
 
 .center{
